prevent position label wrap on panel collapse

--- a/src/styles/part/spectra-panel.module.css
+++ b/src/styles/part/spectra-panel.module.css
@@ -38,6 +38,7 @@
     margin-right: 20px;
     margin-bottom: 20px;
     text-transform: uppercase;
+    min-width: 300px;
 }
 
 .position-label span {
